--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 ESTA ES LA VERCION 0.1
-<h1>Hola a todo el mundo </h1>
+<h1>cambio radical </h1>
 <h3>probando un cambio en la pagina con el edit <h3>
